Add mata_kuliah_simulasi.csv with course data for various programs

--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,9 @@ cache/
 *.sqlite3
 
 # Data files
-database/data/*.csv
 database/data/*.xlsx
+# Allow specific dataset files needed for deployment
+!database/data/mahasiswa_simulasi.csv
 
 # Environment variables
 .env
